@@ -135,7 +135,7 @@ data:extend({
       {inventory_index = defines.inventory.assembling_machine_modules, shift = {0, 1.25}}
     },
     allowed_effects = {"consumption", "speed", "productivity", "pollution", "quality"},
-    crafting_categories = {"sp-oxidizing"},
+    crafting_categories = {"sp-oxidizing", "sp-spoiling"},
     crafting_speed = 1,
     energy_source =
     {
